Added main window to style.css

--- a/src/main/resources/localization/mainWindow_en.properties
+++ b/src/main/resources/localization/mainWindow_en.properties
@@ -5,8 +5,7 @@ aboutMenuItem=About
 closeMenuItem=Close
 changeDirButton=CHANGE
 currentDirectoryLabel=Current Directory
-addRomButton=ADD ROM
+impactButton=ADD ROM
 localImageButton=LOCAL IMAGE
-searchOnlineButton=SEARCH ONLINE
 leftStatusLabel=Left status
 rightStatusLabel=Right status
