Language settings apply to mainwindow

--- a/src/main/resources/localization/mainWindow_en.properties
+++ b/src/main/resources/localization/mainWindow_en.properties
@@ -1,11 +1,15 @@
-helloLabel=Hello
-menuMenu=Menu
+topMenu=Menu
 optionsMenuItem=Options
 aboutMenuItem=About
 closeMenuItem=Close
 changeDirButton=CHANGE
 currentDirectoryLabel=Current Directory
-impactButton=ADD ROM
-localImageButton=LOCAL IMAGE
+impactButton=IMPACT ROM
+addRomButton=ADD ROM
 leftStatusLabel=Left status
 rightStatusLabel=Right status
+windowTitle=Rom Impactor
+currentDirectoryLabel=Current Directory
+systemSelectLabel=System Select
+detailsLabel=Details
+romListLabel=Rom List
