--- a/src/main/resources/localization/mainWindow_es.properties
+++ b/src/main/resources/localization/mainWindow_es.properties
@@ -1,12 +1,15 @@
-helloLabel=Hola
-menuMenu=Menú
+topMenu=Menú
 optionsMenuItem=Opciones
 aboutMenuItem=Acerca de
 closeMenuItem=Cerrar
 changeDirButton=CAMBIAR
-currentDirectoryLabel=Directorio actual
+currentDirectoryLabel=Directorio Actual
+impactButton=IMPACTAR ROM
 addRomButton=AGREGAR ROM
-localImageButton=IMAGEN LOCAL
-searchOnlineButton=BUSCAR EN LÍNEA
-leftStatusLabel=Estado izquierdo
-rightStatusLabel=Estado derecho
+leftStatusLabel=Estado Izquierdo
+rightStatusLabel=Estado Derecho
+windowTitle=Rom Impactor
+currentDirectoryLabel=Directorio Actual
+systemSelectLabel=Selección de Sistema
+detailsLabel=Detalles
+romListLabel=Lista de ROMs
