Main window changes directory settings and saves it

--- a/src/main/resources/localization/mainWindow_en.properties
+++ b/src/main/resources/localization/mainWindow_en.properties
@@ -6,8 +6,7 @@ changeDirButton=CHANGE
 currentDirectoryLabel=Current Directory
 impactButton=IMPACT ROM
 addRomButton=ADD ROM
-leftStatusLabel=Left status
-rightStatusLabel=Right status
+leftStatusLabel=
 windowTitle=Rom Impactor
 currentDirectoryLabel=Current Directory
 systemSelectLabel=System Select
