--- a/src/main/resources/localization/mainWindow_es.properties
+++ b/src/main/resources/localization/mainWindow_es.properties
@@ -6,8 +6,7 @@ changeDirButton=CAMBIAR
 currentDirectoryLabel=Directorio Actual
 impactButton=IMPACTAR ROM
 addRomButton=AGREGAR ROM
-leftStatusLabel=Estado Izquierdo
-rightStatusLabel=Estado Derecho
+leftStatusLabel=
 windowTitle=Rom Impactor
 currentDirectoryLabel=Directorio Actual
 systemSelectLabel=Selección de Sistema
