Added language change in optionsWindow

--- a/src/main/resources/localization/mainWindow_en.properties
+++ b/src/main/resources/localization/mainWindow_en.properties
@@ -12,3 +12,21 @@ currentDirectoryLabel=Current Directory
 systemSelectLabel=System Select
 detailsLabel=Details
 romListLabel=Rom List
+deviceProfilePromptText=Device Profile
+languagePromptText=Language
+steamGridDBLabel=Steam GridDB
+igdbLabel=IGDB
+deviceProfileLabel=Device Profile
+enableLabel=Enable
+manualScaleSizeLabel=Manual Scale Size
+deviceDirectoryLabel=Device Directory
+languageLabel=Language
+manualScaleSizePromptText=Manual Scale Size
+deviceDirectoryPromptText=Device Directory
+steamGridDBApiKeyPromptText=Steam GridDB API Key
+igdbSecretPromptText=IGDB Secret
+igdbClientIdPromptText=IGDB Client ID
+steamGridDBEnabledCheckBox=Enable Steam GridDB
+igdbEnabledCheckBox=Enable IGDB
+manualScaleEnableCheckBox=Enable
+changeDirectoryButtonText=Change
