--- a/src/main/resources/localization/mainWindow_es.properties
+++ b/src/main/resources/localization/mainWindow_es.properties
@@ -3,12 +3,30 @@ optionsMenuItem=Opciones
 aboutMenuItem=Acerca de
 closeMenuItem=Cerrar
 changeDirButton=CAMBIAR
-currentDirectoryLabel=Directorio Actual
+currentDirectoryLabel=Directorio actual
 impactButton=IMPACTAR ROM
 addRomButton=AGREGAR ROM
 leftStatusLabel=
 windowTitle=Rom Impactor
-currentDirectoryLabel=Directorio Actual
-systemSelectLabel=Selección de Sistema
+currentDirectoryLabel=Directorio actual
+systemSelectLabel=Seleccionar sistema
 detailsLabel=Detalles
-romListLabel=Lista de ROMs
+romListLabel=Lista de ROM
+deviceProfilePromptText=Perfil de dispositivo
+languagePromptText=Idioma
+steamGridDBLabel=Steam GridDB
+igdbLabel=IGDB
+deviceProfileLabel=Perfil de dispositivo
+enableLabel=Habilitar
+manualScaleSizeLabel=Tamaño de escala manual
+deviceDirectoryLabel=Directorio del dispositivo
+languageLabel=Idioma
+manualScaleSizePromptText=Tamaño de escala manual
+deviceDirectoryPromptText=Directorio del dispositivo
+steamGridDBApiKeyPromptText=Clave API de Steam GridDB
+igdbSecretPromptText=Secreto de IGDB
+igdbClientIdPromptText=ID de cliente de IGDB
+steamGridDBEnabledCheckBox=Habilitar Steam GridDB
+igdbEnabledCheckBox=Habilitar IGDB
+manualScaleEnableCheckBox=Habilitar
+changeDirectoryButtonText=Cambiar
