Updated the localization files

--- a/src/main/resources/localization/mainWindow_en.properties
+++ b/src/main/resources/localization/mainWindow_en.properties
@@ -30,3 +30,9 @@ steamGridDBEnabledCheckBox=Enable Steam GridDB
 igdbEnabledCheckBox=Enable IGDB
 manualScaleEnableCheckBox=Enable
 changeDirectoryButtonText=Change
+finalPreviewLabel=Final Preview
+selectAllButton=Select All
+coverArtActionsLabel=Cover Art Actions
+localImageSelect=Local Image Select
+onlineImageSearch=Online Image Search
+renameRomEnable=Rename rom with Search Query
