--- a/src/main/resources/localization/mainWindow_es.properties
+++ b/src/main/resources/localization/mainWindow_es.properties
@@ -30,3 +30,9 @@ steamGridDBEnabledCheckBox=Habilitar Steam GridDB
 igdbEnabledCheckBox=Habilitar IGDB
 manualScaleEnableCheckBox=Habilitar
 changeDirectoryButtonText=Cambiar
+finalPreviewLabel=Vista previa final
+selectAllButton=Seleccionar todo
+coverArtActionsLabel=Acciones de la carátula
+localImageSelect=Seleccionar imagen local
+onlineImageSearch=Búsqueda de imágenes en línea
+renameRomEnable=Renombrar ROM con la consulta de búsqueda
